# gordian-gen

./: .gitignore  README.md  flake.nix  gordian-gen.cabal  hello.cabal  result  treefmt.nix
.github/workflows/: builds.yaml
nix/: hix.nix
src/: EAST.hs  SMT.hs  gordian-gen.hs  hello.hs
src/AutoDerive/: BitVecRepr.hs  SMTDatatype.hs
src/EDSL/: Bool.hs  Debug.hs  Either.hs  Elt.hs  Elt.hs-boot  Exp.hs  Match.hs  Maybe.hs  Rec.hs  Trace.hs  Trace.hs-boot  Tuple.hs  Type.hs  Type.hs-boot
src/EDSL/TH/: Common.hs  Elt.hs  IsTuple.hs  Pattern.hs
src/Spec/: Copier.hs  CoreAbstract.hs  Multiplexer.hs  RingBuffer.hs
src/TH/: SMTFunc.hs
