-- Instructions on how to write this file are in the Cabal
-- documentation, which can be found here:
--   http://haskell.org/cabal/release/cabal-latest/doc/users-guide/

name: hello
version: 0.0.0.1
license: BSD3
license-file: LICENSE
copyright: (c) Trustworthy Systems
author: Isitha Subasinghe
maintainer: Isitha Subasinghe <isubasinghe@unsw.edu.au>
bug-reports: mailto:isubasinghe@unsw.edu.au
stability: stable
homepage: https://github.com/isubasinghe/gordian-gen
synopsis: gordian-gen, a generator of SMT bitvec queries from Haskell specification
category: Console, Text
cabal-version: >= 1.8
build-type: Simple

Description:
  This is a generator of SMT from Haskell specification. 

source-repository head
  type:     git
  location: https://github.com/isubasinghe/gordian-gen

flag threaded
  default: False

executable hello
  hs-source-dirs: src
  main-is: hello.hs
  other-modules:
    EAST
    EDSL.Tuple
    EDSL.Elt
    EDSL.Rec 
    EDSL.Trace 
    EDSL.Type
    EDSL.TH.Common
    EDSL.TH.Elt
    EDSL.TH.IsTuple
    EDSL.TH.Pattern
    EDSL.Exp
    EDSL.Match
    EDSL.Debug
    EDSL.Maybe
    SMT

  build-depends: 
    base >= 4.2 && < 5, 
    template-haskell,
    containers >= 0.6 && < 0.7,
    text, 
    bv-sized, 
    ghc-prim

  if flag(threaded)
     ghc-options: -threaded
